--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -49,6 +49,9 @@ const iconSrc = `${base}favicon.svg`;
       <NavTooltipLink href={link('inspirations/')} tip="Ideas and people influencing LifeLoggerz">
         Inspirations
       </NavTooltipLink>
+      <NavTooltipLink href={link('about/')} tip="My life up to this point...">
+        Timeline
+      </NavTooltipLink>
       <NavTooltipLink href={link('about/')} tip="What LifeLoggerz is and who’s behind it">
         About
       </NavTooltipLink>
@@ -105,6 +108,7 @@ const iconSrc = `${base}favicon.svg`;
           <HeaderLink href={link('art/')}>Art</HeaderLink>
           <HeaderLink href={link('guitar/')}>Guitar</HeaderLink>
           <HeaderLink href={link('inspirations/')}>Inspirations</HeaderLink>
+          <HeaderLink href={link('timeline/')}>Timeline</HeaderLink>
           <HeaderLink href={link('about/')}>About</HeaderLink>
         </div>
 
