--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -49,7 +49,7 @@ const iconSrc = `${base}favicon.svg`;
       <NavTooltipLink href={link('inspirations/')} tip="Ideas and people influencing LifeLoggerz">
         Inspirations
       </NavTooltipLink>
-      <NavTooltipLink href={link('about/')} tip="My life up to this point...">
+      <NavTooltipLink href={link('timeline/')} tip="My life up to this point...">
         Timeline
       </NavTooltipLink>
       <NavTooltipLink href={link('about/')} tip="What LifeLoggerz is and who’s behind it">
