--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -277,6 +277,7 @@ const books = await fetchAllRaindrops();
     GENRE_ALIAS_MAP[norm('Comedy')] = 'Satire/Comedy';
     GENRE_ALIAS_MAP[norm('Politics/Philosophy')] = 'Political/Philosophical';
     GENRE_ALIAS_MAP[norm('Politics & Philosophy')] = 'Political/Philosophical';
+    GENRE_ALIAS_MAP[norm("Children’s Literature")] = "Children's Literature";
   
     const genresInUse = new Set();
   
